--- a/css/beta.scss
+++ b/css/beta.scss
@@ -7,30 +7,7 @@
 * #fff
 */
 
-/**
-* Darkmode Colors
-*/
-/*
-$background: #2a2a2a;
-$normalFontColor: #38b2ac;
-$placeholderFontColor: #a2a2a2;
-$normalFontSize: 18px;
-*/
-/**
-* End of Darkmode Colors
-*/
-
-%insetBoxShadow {
-    box-shadow: inset -2px -2px 6px #fff, 
-                inset 2px 2px 6px #a3b1c6;
-}
-%BoxShadow {
-    box-shadow: -4px -4px 9px #fff,
-                4px 4px 9px #a3b1c6;
-}
-
-
-$backgroundColor: #e0e5ec;
+$backgroundColor: #173c45;
 $lightFontColor: #fff;
 $darkFontColor: #333;
 $smallFontSize: 14px;
@@ -38,28 +15,8 @@ $normalFontSize: 18px;
 $elementPadding: 5px 15px;
 $elementMargin: 15px;
 
-%NeumorphElement {
-    @extend %BoxShadow;
-
-    background: $backgroundColor;
-    color: $darkFontColor;
-    font-size: $normalFontSize;
-    padding: $elementPadding;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-}
-
-%insetNeumorphElement {
-    @extend %insetBoxShadow;
-
-    background: $backgroundColor;
-    color: $darkFontColor;
-    font-size: $normalFontSize;
-    padding: $elementPadding;
-    border-radius: 10px;
-    border: none;
-    outline: none;
+%debugBorder {
+    border: 1px solid red;
 }
 
 * {
@@ -68,28 +25,26 @@ $elementMargin: 15px;
     box-sizing: border-box;
     font-family: sans-serif;
     font-weight: 400;
-    color: #0e1e35;
+    color: $darkFontColor;
     font-size: 24px;
 }
         
 body {
-    background: $backgroundColor;
-        
-    header {
-        @extend %NeumorphElement;
 
+    header {
         display: flex;
         flex-direction: column;
         align-content: center;
         justify-content: center;
         text-align: center;
+        background: $backgroundColor;
 
         h1 {
-            color: $darkFontColor;
+            color: $lightFontColor;
         }
 
         .caption {
-            color: $darkFontColor;
+            color: $lightFontColor;
             font-size: 18px;
         }
     }
@@ -109,27 +64,22 @@ body {
             list-style: none;
         }
 
-        .value-display {
-            @extend %insetNeumorphElement;
-        }
+        // .value-display {
+        //
+        // }
 
         .dice-magic {
             margin-top: $elementMargin;
             margin-bottom: $elementMargin;
 
             #btn {
-                @extend %NeumorphElement;
-
-                color: $darkFontColor;
+                color: $lightFontColor;
                 background: $backgroundColor;
+                outline: none;
                 padding: 5px;
                 display: inline;
                 text-align: center;
                 cursor: pointer;
-
-                &:active {
-                    @extend %insetBoxShadow;
-                }
             }
         }
 
@@ -142,14 +92,10 @@ body {
             text-align: center;
 
             .options-caption {
-                @extend %NeumorphElement;
-
                 margin-top: $elementMargin;
             }
 
             input {
-                @extend %insetNeumorphElement;
-    
                 margin-top: 5px;
                 margin-bottom: 5px;
             }
@@ -158,24 +104,29 @@ body {
         .history-wrapper {
 
             .history-caption{
-                @extend %NeumorphElement;
-
                 margin-top: $elementMargin;
                 margin-bottom: $elementMargin;
             }
     
             #roll-history {
-                @extend %insetNeumorphElement;
-
                 margin-top: $elementMargin;
                 margin-bottom: $elementMargin;
                 width: 100%;
             }
+
+            tr {
+
+                th {
+                    width: 30%;
+                }
+
+                td {
+                    width: 30%;
+                }
+            }
         }
-
-        
-
     }
+
     footer {
 
         h6 {
